fluent-syntax/test/fixtures_behavior/tag_starts_from_nl.ftl
key = Value
#tag
//~ ERROR E0002, pos 12
